@@ -431,6 +431,35 @@ class tx_oelib_db {
 		return $result;
 	}
 
+	/**
+	 * Counts the number of matching records in the database for a particular
+	 * WHERE clause.
+	 *
+	 * @throws tx_oelib_Exception_Database if an error has occured
+	 *
+	 * @param string $tableNames
+	 *        comma-separated list of existing tables from which to count, must
+	 *        not be empty
+	 * @param string $whereClause WHERE clause, may be empty
+	 *
+	 * @return integer the number of matching records, will be >= 0
+	 */
+	public static function count($tableNames, $whereClause = '') {
+		$isOnlyOneTable = (strpos($tableNames, ',') === false);
+		if ($isOnlyOneTable && self::tableHasColumnUid($tableNames)) {
+			// Counting only the "uid" column is faster than counting *.
+			$columns = 'uid';
+		} else {
+			$columns = '*';
+		}
+
+		$result = self::selectSingle(
+			'COUNT(' . $columns . ') AS oelib_counter', $tableNames, $whereClause
+		);
+
+		return $result['oelib_counter'];
+	}
+
 
 	/////////////////////////////////////
 	// Functions concerning table names
