@@ -1,4 +1,5 @@
 0.7.0 - currently working on
+- [#2311] Feature: Add tx_oelib_db::count
 - [#3405] Feature: Add Model_FrontEndUser::getAge
 - [#3388] Fix: Autoloader does not load XCLASS
 - [#3387] Feature: Add accessors for the date of birth
